- fixed bug in navbar, when navbar will be collapsed. - removed hover effect of screenshots.

--- a/Seapal_Gruppe_09/de.htwg.seapal-master/de.htwg.seapal-master/Seapal_php/css/bootstrap/bootstrap.css
+++ b/Seapal_Gruppe_09/de.htwg.seapal-master/de.htwg.seapal-master/Seapal_php/css/bootstrap/bootstrap.css
@@ -5889,13 +5889,3 @@ a.badge:hover {
 .affix {
   position: fixed;
 }
-
-/*!
- * New Commands start here...
- */
-
-ul.nav li.dropdown:hover ul.dropdown-menu{
-    display: block;
-    margin-top:0px
-}
-
