--- a/Seapal_Gruppe_09/de.htwg.seapal-master/de.htwg.seapal-master/Seapal_php/css/custom/custom.css
+++ b/Seapal_Gruppe_09/de.htwg.seapal-master/de.htwg.seapal-master/Seapal_php/css/custom/custom.css
@@ -8,3 +8,12 @@
 }
 
 .btn-logout { background-color: hsl(4, 84%, 25%) !important; background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ed4135", endColorstr="#75110a"); background-image: -khtml-gradient(linear, left top, left bottom, from(#ed4135), to(#75110a)); background-image: -moz-linear-gradient(top, #ed4135, #75110a); background-image: -ms-linear-gradient(top, #ed4135, #75110a); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ed4135), color-stop(100%, #75110a)); background-image: -webkit-linear-gradient(top, #ed4135, #75110a); background-image: -o-linear-gradient(top, #ed4135, #75110a); background-image: linear-gradient(#ed4135, #75110a); border-color: #75110a #75110a hsl(4, 84%, 17%); color: #fff !important; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.52); -webkit-font-smoothing: antialiased; }
+
+
+/* Hover effect for dropdowns, let the dropdown open without a click. Not recommended to set this active, because in the collapsed nav bar it causes problems.*/
+ /*
+ul.nav li.dropdown:hover ul.dropdown-menu{
+    display: block;
+    margin-top:0px
+}
+*/
